Fix overflow on safari

--- a/styles/helpers.css
+++ b/styles/helpers.css
@@ -82,6 +82,7 @@
 .no-scroll {
     overflow: hidden;
     position: relative;
+    height: 100%;
 }
 
 .is-fixed {
